--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -62,3 +62,16 @@ body {
     cursor: pointer;
 }
 
+.middle_container {
+	position: fixed;
+	left:250px;
+	bottom: 0px;
+	top : 45px;
+	width: 700px;
+	background-color: #373737;
+	margin-left: 5px;
+	margin-top: 5px;
+	overflow: auto;
+	z-index: 2;
+}
+
