--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -75,3 +75,75 @@ body {
 	z-index: 2;
 }
 
+.search_result_item {
+	display: inline-block;
+	width: 220px;
+	height: 220px;
+	vertical-align: top;
+	padding-left: 6px;
+	padding-top: 5px;
+}
+
+	.title {
+		position: relative;
+		top : -50px;
+		color: white;
+		text-align: center;
+	}
+	
+	.thumbnail {
+		position: relative;
+		left: 50px;
+		width: 120px;
+		height: 90px;
+	
+	}
+	
+	.thumbnail:hover {
+		cursor: pointer;
+	}
+	
+	.reflection {
+		position: relative;
+		left: 50px;
+		width: 120px;
+		height: 90px;
+	}
+	.reflection img {
+		width: 120px;
+		height: 90px;
+		/*-webkit-box-reflect: below 0 -webkit-gradient(
+	  		linear,left top,left bottom,
+	  		from(transparent),color-stop(0.93,transparent),to(rgba(255,255,255,0.3))
+		);*/
+	    -webkit-transform: scaleY(-1);
+	       -moz-transform: scaleY(-1);
+	        -ms-transform: scaleY(-1);
+	         -o-transform: scaleY(-1);
+	            transform: scaleY(-1);
+	    filter: flipv; opacity:0.20;
+	    filter: alpha(opacity='20');
+	}
+	
+	.overlay { 
+		position:absolute; top:0px; left:0px; width:120px; height:90px;
+		background-image:     -webkit-gradient( linear, left bottom, left top, color-stop(0.60, rgb(55,55,55)), color-stop(0.75, rgba(46,46,46,0)));
+	    background-image: -moz-linear-gradient( center bottom, rgb(55,55,55) 60%, rgba(46,46,46,0) 75%);
+	    background-image:   -o-linear-gradient( rgba(46,46,46,0) 25%, rgb(55,55,55) 40%);
+	    background-image:     -webkit-gradient( linear, left bottom, left top, color-stop(0.60, rgb(55,55,55)), color-stop(0.75, rgba(46,46,46,0)));
+	}
+	
+	.duration {
+		position: relative;
+		display: inline-block;
+		top: -120px;
+		left : 52px;
+		color : white;
+		background-color: black;
+		opacity: 0.7;
+		padding-left: 2px;
+		padding-right: 2px;
+		padding-bottom: 2px;
+		border-radius : 2px;
+	}
+
