--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -16,16 +16,16 @@ body {
  * top nav
  */
 
-#container_top{
+#container_top, #songs th{
     position: relative;
     width: 100%;
     height: 50px;
     background: rgb(236,236,238); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(236,236,238,1) 0%, rgba(176,176,178,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(236,236,238,1)), color-stop(100%,rgba(176,176,178,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(236,236,238,1) 0%,rgba(176,176,178,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(236,236,238,1) 0%,rgba(176,176,178,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(236,236,238,1) 0%,rgba(176,176,178,1) 100%); /* IE10+ */
+    background: -moz-linear-gradient(top,  rgba(236,236,238,1) 0%, rgba(176,176,178,1) 100%); /* FF3.6   */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(236,236,238,1)), color-stop(100%,rgba(176,176,178,1))); /* Chrome,Safari4   */
+    background: -webkit-linear-gradient(top,  rgba(236,236,238,1) 0%,rgba(176,176,178,1) 100%); /* Chrome10  ,Safari5.1   */
+    background: -o-linear-gradient(top,  rgba(236,236,238,1) 0%,rgba(176,176,178,1) 100%); /* Opera 11.10   */
+    background: -ms-linear-gradient(top,  rgba(236,236,238,1) 0%,rgba(176,176,178,1) 100%); /* IE10   */
     background: linear-gradient(top,  rgba(236,236,238,1) 0%,rgba(176,176,178,1) 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ececee', endColorstr='#b0b0b2',GradientType=0 ); /* IE6-9 */
 }
@@ -39,7 +39,7 @@ body {
     border-radius: 15px;
     -moz-border-radius: 15px;
     -webkit-border-radius: 15px;
-    background:#FFFFFF url(search.png) no-repeat 4px 4px;
+    background:#FFFFFF url(../images/search.png) no-repeat 4px 4px;
     position: relative;
     left: 50px;
     top: 20px;
@@ -50,15 +50,15 @@ body {
  */
 
 #left_nav {
-	position: absolute;
+    position: absolute;
 }
-	#new_playlist_name {
-	    display: none;
-	    position: absolute;
-	    top: 35px;
-	    left: 10px;
-	    width: 105px;
-	}
+    #new_playlist_name {
+        display: none;
+        position: absolute;
+        top: 35px;
+        left: 10px;
+        width: 105px;
+    }
 
 
 #add_playlist {
@@ -83,127 +83,127 @@ body {
  */
 
 .middle_container {
-	position: fixed;
-	left:250px;
-	bottom: 0px;
-	top : 45px;
-	width: 700px;
-	background-color: #373737;
-	margin-left: 5px;
-	margin-top: 5px;
-	overflow: auto;
-	z-index: 2;
+    position: fixed;
+    left:250px;
+    bottom: 0px;
+    top : 45px;
+    width: 700px;
+    background-color: #373737;
+    margin-left: 5px;
+    margin-top: 5px;
+    overflow: auto;
+    z-index: 2;
 }
 
 .search_result_item {
-	display: inline-block;
-	width: 220px;
-	height: 220px;
-	vertical-align: top;
-	padding-left: 6px;
-	padding-top: 5px;
+    display: inline-block;
+    width: 220px;
+    height: 220px;
+    vertical-align: top;
+    padding-left: 6px;
+    padding-top: 5px;
 }
 
-	.title {
-		position: relative;
-		top : -50px;
-		color: white;
-		text-align: center;
-	}
-	
-	.thumbnail {
-		position: relative;
-		left: 50px;
-		width: 120px;
-		height: 90px;
-	
-	}
-	
-	.thumbnail:hover {
-		cursor: pointer;
-	}
-	
-	.reflection {
-		position: relative;
-		left: 50px;
-		width: 120px;
-		height: 90px;
-	}
-	.reflection img {
-		width: 120px;
-		height: 90px;
-		/*-webkit-box-reflect: below 0 -webkit-gradient(
-	  		linear,left top,left bottom,
-	  		from(transparent),color-stop(0.93,transparent),to(rgba(255,255,255,0.3))
-		);*/
-	    -webkit-transform: scaleY(-1);
-	       -moz-transform: scaleY(-1);
-	        -ms-transform: scaleY(-1);
-	         -o-transform: scaleY(-1);
-	            transform: scaleY(-1);
-	    filter: flipv; opacity:0.20;
-	    filter: alpha(opacity='20');
-	}
-	
-	.overlay { 
-		position:absolute; top:0px; left:0px; width:120px; height:90px;
-		background-image:     -webkit-gradient( linear, left bottom, left top, color-stop(0.60, rgb(55,55,55)), color-stop(0.75, rgba(46,46,46,0)));
-	    background-image: -moz-linear-gradient( center bottom, rgb(55,55,55) 60%, rgba(46,46,46,0) 75%);
-	    background-image:   -o-linear-gradient( rgba(46,46,46,0) 25%, rgb(55,55,55) 40%);
-	    background-image:     -webkit-gradient( linear, left bottom, left top, color-stop(0.60, rgb(55,55,55)), color-stop(0.75, rgba(46,46,46,0)));
-	}
-	
-	.duration {
-		position: relative;
-		display: inline-block;
-		top: -120px;
-		left : 52px;
-		color : white;
-		background-color: black;
-		opacity: 0.7;
-		padding-left: 2px;
-		padding-right: 2px;
-		padding-bottom: 2px;
-		border-radius : 2px;
-	}
-	
+    .title {
+        position: relative;
+        top : -50px;
+        color: white;
+        text-align: center;
+    }
+    
+    .thumbnail {
+        position: relative;
+        left: 50px;
+        width: 120px;
+        height: 90px;
+    
+    }
+    
+    .thumbnail:hover {
+        cursor: pointer;
+    }
+    
+    .reflection {
+        position: relative;
+        left: 50px;
+        width: 120px;
+        height: 90px;
+    }
+    .reflection img {
+        width: 120px;
+        height: 90px;
+        /*-webkit-box-reflect: below 0 -webkit-gradient(
+              linear,left top,left bottom,
+              from(transparent),color-stop(0.93,transparent),to(rgba(255,255,255,0.3))
+        );*/
+        -webkit-transform: scaleY(-1);
+           -moz-transform: scaleY(-1);
+            -ms-transform: scaleY(-1);
+             -o-transform: scaleY(-1);
+                transform: scaleY(-1);
+        filter: flipv; opacity:0.20;
+        filter: alpha(opacity='20');
+    }
+    
+    .overlay { 
+        position:absolute; top:0px; left:0px; width:120px; height:90px;
+        background-image:     -webkit-gradient( linear, left bottom, left top, color-stop(0.60, rgb(55,55,55)), color-stop(0.75, rgba(46,46,46,0)));
+        background-image: -moz-linear-gradient( center bottom, rgb(55,55,55) 60%, rgba(46,46,46,0) 75%);
+        background-image:   -o-linear-gradient( rgba(46,46,46,0) 25%, rgb(55,55,55) 40%);
+        background-image:     -webkit-gradient( linear, left bottom, left top, color-stop(0.60, rgb(55,55,55)), color-stop(0.75, rgba(46,46,46,0)));
+    }
+    
+    .duration {
+        position: relative;
+        display: inline-block;
+        top: -120px;
+        left : 52px;
+        color : white;
+        background-color: black;
+        opacity: 0.7;
+        padding-left: 2px;
+        padding-right: 2px;
+        padding-bottom: 2px;
+        border-radius : 2px;
+    }
+    
 /*
  * playlists view
  */
 
 #playlists {
-	position: relative;
-	top: 20px;
-	left: 10px;
-	width: 80%;
-	list-style-type: none;
-	color: white;
+    position: relative;
+    top: 20px;
+    left: 10px;
+    width: 80%;
+    list-style-type: none;
+    color: white;
 }
 
-	.playlistItem {
-		padding: 5px;
-		font-size: 16px;
-	}
-	
-	.playlistItem:hover {
-		cursor: pointer;
-	}
-			
-		.delete {
-			background: url('../images/delete.png') no-repeat;
-			height: 20px;
-			width: 20px;
-	    }
+    .playlistItem {
+        padding: 5px;
+        font-size: 16px;
+    }
+    
+    .playlistItem:hover {
+        cursor: pointer;
+    }
+            
+        .delete {
+            background: url('../images/delete.png') no-repeat;
+            height: 20px;
+            width: 20px;
+        }
 .song-draggable {
-	border: 1px solid black;
-	background-color: white;
-	opacity: 0.8;
-	z-index: 99;
-	padding: 2px;
+    border: 1px solid black;
+    background-color: white;
+    opacity: 0.8;
+    z-index: 99;
+    padding: 2px;
 }
 
 #playlist_view {
-	color: white;
+    color: white;
 }
 
 .playlist_thumbnail {
@@ -217,33 +217,74 @@ body {
 }
 
 .playlist_individual_thumb {
-	position: relative;
-	top:15px;
-	left: 3px;
-	-webkit-box-shadow: 1px 0px 5px 1px black;
+    position: relative;
+    top:15px;
+    left: 3px;
+    -webkit-box-shadow: 1px 0px 5px 1px black;
 }
 
 #other_info {
-	display: inline-block;
-	vertical-align: top;
-	width: 550px;
-	background-color: transparent;
-	font-size: 16px;
-	padding: 10px;
-	border-radius: 10px;
-	position: absolute;
-	
+    display: inline-block;
+    vertical-align: top;
+    width: 550px;
+    background-color: transparent;
+    font-size: 16px;
+    padding: 10px;
+    border-radius: 10px;
+    position: absolute;
+    
 }
 
 #playlist_time {
-	float: right;
-	color: #bdbdbd;
+    float: right;
+    color: #bdbdbd;
 
 }
 
 #playlist_title {
-	float: left;
-	font-weight: bold;
+    float: left;
+    font-weight: bold;
 }
 
+/*
+* song list 
+*/
+#songs {
+  padding-top: 10px;
+  font-size: 14px;
+  width: 700px;
+  border-collapse: collapse;
+}
+#songs th {
+  background-color: #a4a4a4;
+  color: black;
+  height: 10px;
+}
+
+#songs tr {
+  color: #bdbdbd;
+}
+#track_header {
+  width: 80%;
+}
+#duration_header {
+  width:20%;
+}
+
+/*
+ * song view 
+ */
+
+.small_thumb {
+  width: 34px;
+  height: 34px;
+}
+
+.odd_row {
+  background-color: #373737;
+}
+
+.even_row {
+  background-color: #313131;
+}
 
