--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -51,6 +51,7 @@ body {
 
 #left_nav {
     position: absolute;
+    width: 200px;
 }
     #new_playlist_name {
       display: none;
@@ -173,7 +174,7 @@ body {
     position: relative;
     top: 20px;
     left: 10px;
-    width: 80%;
+    width: 100%;
     list-style-type: none;
     color: white;
 }
