--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -225,7 +225,7 @@ body {
 #other_info {
     display: inline-block;
     vertical-align: top;
-    width: 550px;
+    width: 70%;
     background-color: transparent;
     font-size: 16px;
     padding: 10px;
@@ -251,7 +251,7 @@ body {
 #songs {
   padding-top: 10px;
   font-size: 14px;
-  width: 700px;
+  width: 100%;
   border-collapse: collapse;
 }
 #songs_header {
@@ -287,6 +287,7 @@ body {
 .even_row {
   background-color: #313131;
 }
+
 /* video player */
 
 #video_player_container {
