--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -177,22 +177,43 @@ body {
     width: 100%;
     list-style-type: none;
     color: white;
+    padding-top: 10px;
 }
 
     .playlistItem {
+        position: relative;
         padding: 5px;
         font-size: 16px;
+    }
+
+    .playlist_name {
+      position: absolute;
+      height: 25px;
+      margin-top: -12.5px;
+      top: 50%;
+      left: 10%;
+    }
+
+    .playlistItem .delete {
+        position: absolute;
+        background: url('../images/delete.png') no-repeat;
+        height: 20px;
+        margin: -12.5px;
+        width: 20px;
+        top: 50%;
+        left: 90%;
     }
 
     .playlistItem:hover {
         cursor: pointer;
     }
 
-        .delete {
-            background: url('../images/delete.png') no-repeat;
-            height: 20px;
-            width: 20px;
-        }
+  .delete {
+  background: url('../images/delete.png') no-repeat;
+  height: 20px;
+  width: 20px;
+  }
+
 .song-draggable {
     border: 1px solid black;
     background-color: white;
@@ -274,11 +295,39 @@ body {
 /*
  * song view
  */
+.song {
+  position: relative;
+}
 
+.song_title {
+  position: absolute;
+  top: 50%;
+  margin-left: 20px;
+  height: 25px;
+  margin-top: -12.5px;
+}
+.song_duration {
+  position: absolute;
+  float: right;
+  top: 50%;
+  left: 80%;
+  height: 25px;
+  margin-top: -12.5px;
+}
 .small_thumb {
   width: 34px;
   height: 34px;
 }
+
+  .song .delete {
+  position: absolute;
+  top: 50%;
+  left: 90%;
+  background: url('../images/delete.png') no-repeat;
+  height: 20px;
+  margin-top: -12.5px;
+  width: 20px;
+  }
 
 .odd_row {
   background-color: #373737;
